
* General

** Added support for parsing CIDR-style [Classless Inter-Domain Routing]
   netmasks in element configuration strings. Old-style netmasks are still
   supported. So for the 18.26.7 subnet, you can write either `18.26.7.0
   255.255.255.0' or `18.26.7.0/24'.

** Added new `tickets' handler, available by default on every element.

* User-level driver

** User-level Click will no longer stop by default when an InfiniteSource
   (or RatedSource or FromDump) runs out of packets to send. Supply the
   `-s' option to get the old behavior.

** User-level Click can optionally dump the output of element read handlers
   into a directory (directory path specified using -d option) or stdout on a
   regular basis (duration specified by argument to ReadHandlerCaller element).

** Fixed FromBPF and ToBPF, finally.

* Kernel driver

** Added patch for Linux kernel 2.2.16 and PCMCIA Card Services 3.1.16.

* Elements

** Fixed kernel alignment bug in IP header checking elements: can't use
   Linux's `fast_ip_csum' on unaligned data.

** Added QuitWatcher, FrontDropQueue, and StripIPHeader.

** Fixed FromBPF and ToBPF bugs. Now FromBPF will not starve other router
   processing, and ToBPF works on Linux.

** Fixed FromLinux bug: now supports multiple instances of FromLinux for same
   device (this happens while installing a new configuration: initialize is
   called on the new FromLinux before the last FromLinux instance is
   uninitialized).

** Fixed ToLinux: now calls ptype_dispatch inside start_bh_atomic() and
   end_bh_atomic().

** Modified ToDevice: ToDevice now sends linux packets if device is idle. This
   prevents click from starving out packets sent by other processes / linux.

** Renamed the SetIPAddress element to StoreIPAddress. Added a different
   SetIPAddress element.

** Radio elements are not compiled by default.

** Added new `elements/local' directory for your own elements. They are not
   compiled by default.

* Tools
